--- a/generators/javascript_test/templates/javascript_test.html
+++ b/generators/javascript_test/templates/javascript_test.html
@@ -4,12 +4,22 @@
 <head>
   <title>JavaScript unit test file</title>
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-  <% if options[:app_assets] -%>
-  <script src="../../public/javascripts/prototype.js" type="text/javascript"></script>
-  <% else -%>
-  <script src="assets/prototype.js" type="text/javascript"></script>
+  <% unless options[:prototype] -%>
+    <% if options[:app_assets] -%>
+      <script src="../../public/javascripts/prototype.js" type="text/javascript"></script>
+    <% else -%>
+      <script src="assets/prototype.js" type="text/javascript"></script>
+    <% end -%>
   <% end -%>
-  <script src="assets/unittest.js" type="text/javascript"></script>
+  <% if options[:prototype] -%>
+    <script src="assets/unittest.js" type="text/javascript"></script>
+  <% else -%>
+    <script src="assets/jsunittest.js" type="text/javascript"></script>
+  <% end -%>
+  <% if options[:extjs] -%>
+    <script src="../../public/ext/adapter/ext/ext-base.js" type="text/javascript"></script>
+    <script src="../../public/ext/ext-all-debug.js" type="text/javascript"></script>
+  <% end -%>
   
   <script src="../../public/javascripts/<%= name %>.js" type="text/javascript"></script>
   
